--- a/点滴生活/miniprogram/pages/index/index.wxml
+++ b/点滴生活/miniprogram/pages/index/index.wxml
@@ -61,8 +61,8 @@
 
   <!-- 新建云函数 -->
   <view class="uploader">
-    <navigator url="../addFunction/addFunction" open-type="navigate" class="uploader-text">
-      <text>快速新建云函数</text>
+    <navigator url="../keepaccounts/keepaccounts.wxml" open-type="navigate" class="uploader-text">
+      <text>记账</text>
     </navigator>
   </view>
 
