额度提醒模块样式和字体还有布局的修改

--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -1,4 +1,3 @@
-<view>可用额度</view><view>100/200</view>
+<view><text id="canUseText">可用额度</text><text id="limitText">剩余：1000</text></view>
 <progress class="limitprogress" percent="{{percent}}" color="{{progresscolor}}" backgroundColor="gray" active="false" stroke-width="30px"></progress>
-
-<view>{{noticetext}}</view>
+<view id="encourageText">{{noticetext}}</view>
