--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
@@ -1,4 +1,5 @@
 .limitprogress{
+  margin-top: 11px;
   margin-left: 17px;
   margin-right: 26px;
   border-radius: 100px;
@@ -7,4 +8,21 @@
 
 .wx-progress-inner-bar {
   border-radius: 14px;
+}
+
+#canUseText{
+  margin-top: 106px;
+  margin-left: 15px;
+  font-size: 14px;
+  color: #101010;
+}
+#limitText{
+  margin-left: 200px;
+  color: #F58B7E;
+  font-size: 12px;
+}
+#encourageText{
+  margin: 12px auto;
+  font-size: 12px;
+  color:#909090;
 }
