--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -1,3 +1,3 @@
-<view><text id="canUseText">可用额度</text><text id="limitText">剩余：1000</text></view>
-<progress class="limitprogress" percent="{{percent}}" color="{{progresscolor}}" backgroundColor="gray" active="false" stroke-width="30px"></progress>
-<view id="encourageText">{{noticetext}}</view>
+<view class="limit_hb">
+<limitprogress></limitprogress>
+</view>
