简单实现了顶部自定义标题栏
图标样式还不够合适，而且还没完成事件的绑定，（已经有些头绪，明天起来再看看教程）。

--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -1,3 +1,8 @@
+// 'navbar-data'中navbar是自定义导航栏标题
+<navbar navbar-data='{{nvabarData}}'></navbar>
+
 <view class="limit_hb">
 <limitprogress></limitprogress>
 </view>
+<view class="datatable"></view>
+<view class="accountlist"></view>
