--- a/点滴生活/miniprogram/pages/keepthing/keepthing.wxml
+++ b/点滴生活/miniprogram/pages/keepthing/keepthing.wxml
@@ -1,3 +1,5 @@
+// 'navbar-data'中navbar是自定义导航栏标题
+<navbar navbar-data='{{nvabarData}}'></navbar>
 <view class="csk-upload">
   <uploadPic></uploadPic>
 </view>
