--- a/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
+++ b/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
@@ -1,1 +1,8 @@
-<view>aaa</view>
+<view class="maintain">
+  <image src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=2231949345,768597699&fm=11&gp=0.jpg" class="pic"></image>
+  <view class="personal">
+    <view class="name">aaaaaaassss</view>
+    <view class="nums">
+  </view>
+  </view>
+</view>
