--- a/点滴生活/miniprogram/pages/mycenter/mycenter.wxss
+++ b/点滴生活/miniprogram/pages/mycenter/mycenter.wxss
@@ -1,5 +1,6 @@
 .maintain{
-  height: 190px;
+  padding-top: 40px;
+  height: 250px;
   width: 100%;
   border:1px solid #CCC;
   border-top-color: white;
@@ -13,7 +14,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: 20px;
+  top: 80px;
   margin: auto;
   z-index: 1;
 }
