--- a/点滴生活/miniprogram/components/hb/limitprogress/limitprogress.wxml
+++ b/点滴生活/miniprogram/components/hb/limitprogress/limitprogress.wxml
@@ -1,6 +1,6 @@
 <!--components/hb/limitprogress.wxml-->
 <view>
-  <text class="canUseText">可用额度</text><text class="limitText">剩余：1000</text></view>
-<progress class="limitprogress" percent="{{percent}}" color="{{progresscolor}}" backgroundColor="gray" active="false"
+  <text class="canUseText">可用额度</text><text class="limitText">剩余：{{remain}}</text></view>
+<progress  id="pr" class="limitprogress" percent="{{percent}}" color="{{progresscolor}}" backgroundColor="gray" active="false"
   stroke-width="30px"></progress>
 <view class="encourageText">{{noticetext}}</view>
