--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -1,8 +1,10 @@
 // 'navbar-data'中navbar是自定义导航栏标题
-<navbar navbar-data='{{nvabarData}}'></navbar>
+<navbar navbar-data='{{nvabarData}}' bindnavedit="accountedit"></navbar><!--这个bindnavedit是一个属性，后面的值是绑定函数，函数用来跳转到对应的编辑界面-->
 
 <view class="limit_hb">
 <limitprogress></limitprogress>
 </view>
 <view class="datatable"></view>
-<view class="accountlist"></view>
+<view class="accountlist_zj">
+<accountlist accountlist='{{accountlist}}' account-type="0"></accountlist>
+</view>
