--- a/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
+++ b/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
@@ -26,10 +26,23 @@
     <input class="quotainput" type="number"></input>
     <view class="element">元</view>
   </view>
-  <view class="myrelease_notification">
-    <image src="../../images/keepthing.png" class="release_notification"></image>
-    <view class="release_notificationtext">设置月消费额度</view>
+  <view class="myrelease_notification" style="border-bottom:white;">
+    <image src="../../images/release.png" class="release_notification"></image>
+    <view class="release_notificationtext">我的发布</view>
     <image src="../../images/goto.png" class="goto"></image>
+  </view>
+  <view class="myrelease_notification">
+    <image src="../../images/notification.png" class="release_notification"></image>
+    <view class="release_notificationtext">我的通知</view>
+    <image src="../../images/goto.png" class="goto"></image>
+  </view>
+  <view class="myabout" style="border-bottom:white;">
+    <image src="../../images/we.png" class="about"></image>
+    <view class="abouttext">关于我们</view>
+  </view>
+  <view class="myhelp">
+    <image src="../../images/help.png" class="help"></image>
+    <view class="helptext">帮助</view>
   </view>
 </view>
 
