--- a/点滴生活/miniprogram/pages/makeaccount/makeaccount.wxss
+++ b/点滴生活/miniprogram/pages/makeaccount/makeaccount.wxss
@@ -1,1 +1,31 @@
 /* miniprogram/pages/makeaccount/makeaccount.wxss */
+.border{
+  margin-top: 200rpx;
+  width: 100%;
+  height: 0;
+}
+.typeList{
+  width: 100%;
+  padding-left: 25rpx;
+  text-align: center;
+  border: salmon;
+  display: flex;
+  text-align: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.type{
+  width: 108rpx;
+  height: 105rpx;
+  margin: 35rpx;
+  position: relative;
+}
+.txt{
+  width: 100%;
+  height: 10%;
+}
+.img{
+  width: 100%;
+  height: 90%;
+}
