加了自定义键盘的点击逻辑

--- a/点滴生活/miniprogram/components/csk/keyboard/keyboard.wxml
+++ b/点滴生活/miniprogram/components/csk/keyboard/keyboard.wxml
@@ -1,8 +1,8 @@
 <view class="keyboard">
   <view class="remark">
-  <input class="textnormal" bindinput="name" value="{{name}}" placeholder="备注"></input>
+  <input class="textnormal" placeholder="备注"></input>
 </view>
-<view class="keynum" wx:for="{{keyNumber}}" wx:key="keynum" data-value="{{item}}">
+<view class="keynum" wx:for="{{keyNumber}}" wx:key="keyNumber" data-value="{{item}}">
   <view class="normal{{index%4}}" hover-class="normalhover{{index%4}}">
     {{item}}
   </view>
