--- a/点滴生活/miniprogram/pages/makeaccount/makeaccount.wxml
+++ b/点滴生活/miniprogram/pages/makeaccount/makeaccount.wxml
@@ -1,23 +1,34 @@
 <!--miniprogram/pages/makeaccount/makeaccount.wxml-->
 <navbar navbar-data='{{nvabarData}}'></navbar>
 <view class="border"></view>
-
-
-
-
+<view catchtap="hideKeyboard">
+<view class="csk-number-border">
+  <view class="csk-type" >{{selectedType==''?'类型':selectedType}}</view>
+  <view class="csk-number" catchtap="showKeyboard">
+      {{numberText==''?'金额':numberText}}
+  </view>
+</view>
 <view class="text1-csk">
   <text class="txt2-csk">请选择支出类型</text>
 </view>
 <view class="typeList"> 
   <view wx:for="{{type}}" wx:key="type">
-    <view class="type">
+    <view class="type" catchtap="selectType" data-value="{{item.des}}" data-url="{{item.url}}">
       <image class="img" src="{{item.url}}"></image>
       <text class="txt1-csk">{{item.des}}</text>
     </view>
   </view>
 </view>
 
-
------------
 <button type="primary" catchtap="returnA" >返回</button>
-<keyboard></keyboard>
+
+
+<view class="keyboard" wx:if="{{isShow}}">
+  <view class="remark">
+    <input class="textnormal" bindinput="name" value="{{name}}" placeholder="备注"></input>
+  </view>
+  <view class="keynum" wx:for="{{keyNumber}}" wx:key="keyNumber" data-value="{{item}}" catchtap="keyboardTap" >
+    <view class="normal{{index%4}}" hover-class="normalhover{{index%4}}">{{item}}</view>
+  </view>
+</view>
+</view>
