--- a/点滴生活/miniprogram/pages/makeaccount/makeaccount.wxss
+++ b/点滴生活/miniprogram/pages/makeaccount/makeaccount.wxss
@@ -35,11 +35,140 @@
   height: 90%;
 }
 .text1-csk{
+  margin-top: 25rpx;
   margin-bottom: 40rpx;
   margin-left: 65rpx;
 }
 .txt2-csk{
   font-style: normal;
   font-size: 32rpx;
+  font-weight: 200rpx;
   color:slategray;
+}
+.normal3{
+  display: flex;
+  line-height: 50rpx;
+  margin: .5rpx;
+  float: left;
+  color: gray;
+  font-size: 32rpx;
+  font-weight: 400;
+  width: 16.5%;
+  height: 110rpx;
+  background: #F4F2F2 100%;
+  align-items: center;
+  justify-content: center;
+  border-radius:5rpx;
+  text-align: center;
+}
+.normal1 , .normal2 , .normal0{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: white;
+  line-height: 50rpx;
+  margin: .5rpx;
+  float: left;
+  color: gray;
+  font-size: 32rpx;
+  font-weight: 400;
+  width: 27%;
+  height: 110rpx;
+  background: #F4F2F2 100%;
+  border-radius:5rpx;
+  text-align: center;
+}
+.remark{
+  position: relative;
+  background: #F4F2F2 100%;
+  height: 110rpx;
+}
+.textnormal{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  background: white;
+  width: 90%;
+  margin: auto;
+  height: 80%;
+  text-align: center;
+  border-radius: 35rpx;
+  box-shadow: 0.9rpx 0.7rpx 0.8rpx #D8D6D6 100%;
+}
+
+.normalhover3{
+  display: flex;
+  line-height: 50rpx;
+  margin: .5rpx;
+  float: left;
+  color: gray;
+  font-size: 32rpx;
+  font-weight: 400;
+  width: 16.5%;
+  height: 110rpx;
+  background: #FFC8A1 100%;
+  align-items: center;
+  justify-content: center;
+  border-radius:5rpx;
+  text-align: center;
+}
+.normalhover1 ,.normalhover2 ,.normalhover0{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: white;
+  line-height: 50rpx;
+  margin: .5rpx;
+  float: left;
+  color: gray;
+  font-size: 32rpx;
+  font-weight: 400;
+  width: 27%;
+  height: 110rpx;
+  background: #dddddd;
+  border-radius:5rpx;
+  text-align: center;
+}
+.keyboard{
+  position: absolute;
+  bottom: 0px;
+  height: auto;
+  width: 100%;
+}
+.csk-number-border{
+  margin: auto;
+  width: 93%;
+  height: 92rpx;
+  border: 0.5rpx solid;
+  justify-content: center;
+  border-color: darkgrey;
+  border-radius: 32rpx 0rpx 0rpx 32rpx;
+  box-shadow: 6rpx 6rpx 5rpx #888888;
+}
+.csk-type{
+  width: 15%;
+  float: left;
+  height: 100%;
+  position: relative;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 32rpx 0rpx 0rpx 32rpx;
+  background-color: lightcoral;
+  font-size: 34rpx;
+  font-weight: 500;
+  color:white;
+}
+.csk-number{
+  height: 100%;
+  width: 70%;
+  float: left;
+  position: relative;
+  color: gray;
+  display: flex;
+  align-items: center;
+  font-size: 34rpx;
+  font-weight: 500;
 }
