--- a/点滴生活/miniprogram/components/hb/limitprogress/limitprogress.wxss
+++ b/点滴生活/miniprogram/components/hb/limitprogress/limitprogress.wxss
@@ -23,7 +23,10 @@
   font-size: 28rpx;
 }
 .encourageText{
-  margin: 12rpx 200rpx;
-  font-size: 18px;
+  font-size: 24rpx;
+  color: #909090;
+  text-align: center;
+  margin-top:20rpx;
+  margin-bottom: 20rpx;
   color:#909090;
 }
