--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
@@ -2,21 +2,65 @@
   position: relative;
 }
 .limit_hb{
-  margin-top:160rpx;
+  width:750rpx;
+  position:absolute;
+  top:135rpx;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.23);
 }
+.in_pay_tapbar{
+  width: 242rpx;
+  height: 64rpx;
+  border-radius: 60rpx;
+  background-color:  rgba(253, 242, 241, 100);
+  position:absolute;
+  top:360rpx;
+  left:34rpx;
+}
+.income{
+  font-size:28rpx;
+  color:#909090;
+  pointer-events: none;/*解决文字遮挡点击事件的问题*/
+  position: absolute;
+  left:154rpx;
+  top:10rpx;
+}
+.expend{
+  font-size:28rpx;
+  color:#FFFFFF;
+  pointer-events: none;/*解决文字遮挡点击事件的问题*/
+  position:absolute;
+  left:40rpx;
+  top:10rpx;
+}
+.slide{
+  width: 136rpx;
+  height: 64rpx;
+  position: absolute;
+  left:0rpx;
+}
+.tablechange{
+  width:72rpx;
+  height:72rpx;
+  position: absolute;
+  top:350rpx;
+  right:64rpx;
+}
+.datatableblock{
+  display: none;
+  width: 700rpx;
+  height: 500rpx;
+  border: 1rpx solid rgba(255, 255, 255, 50);
+  border-color:#FFFFFF ;
+  border-radius: 40rpx;
+  box-shadow: 0rpx 0rpx 12rpx 0rpx rgba(81, 81, 81, 18);
+  position: absolute;
+  top:534rpx;
+  left:25rpx;
+} 
 .accountlist_zj{
   width:700rpx;
   height:840rpx;
-  left:28rpx;
-  top:1100rpx;
-}
-.datatable{
-  width: 750rpx;
-  height: 500rpx;
-  margin-top:40rpx;
-} 
-
-ec-canvas {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top:1000rpx;
+  left:25rpx;
 }
