--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
@@ -46,21 +46,30 @@
   right:64rpx;
 }
 .datatableblock{
-  display: none;
   width: 700rpx;
-  height: 500rpx;
+  height: 600rpx;
   border: 1rpx solid rgba(255, 255, 255, 50);
   border-color:#FFFFFF ;
   border-radius: 40rpx;
   box-shadow: 0rpx 0rpx 12rpx 0rpx rgba(81, 81, 81, 18);
   position: absolute;
-  top:534rpx;
+  top:460rpx;
   left:25rpx;
 } 
+.datatable{
+  width:620rpx;
+  height:334rpx;
+  border-style:solid;
+  border-width: 2rpx;
+  border-color:#686565;
+  position: absolute;
+  top: 100rpx;
+  left:40rpx;
+}
 .accountlist_zj{
   width:700rpx;
   height:840rpx;
   position: absolute;
-  top:1000rpx;
+  top:1050rpx;
   left:25rpx;
 }
