在我的发布界面也加上了滑块

--- a/点滴生活/miniprogram/pages/mycenter/release.wxml
+++ b/点滴生活/miniprogram/pages/mycenter/release.wxml
@@ -1,3 +1,8 @@
 <!--miniprogram/pages/mycenter/release.wxml-->
 <navbar navbar-data='{{nvabarData}}' bindnavback='backToMycenter'></navbar>
 
+<view class="in_pay_tapbar">
+      <image class="slide" animation="{{animation}}"bindtap="slidemove" src="../../images/income.png" mode='scaleToFill' ></image>
+      <text class="income" style="color:{{incomecolor}}">收入</text>
+      <text class="expend" style="color:{{expendcolor}}">支出</text>
+    </view>
