--- a/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
+++ b/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
@@ -26,7 +26,7 @@
     <input class="quotainput" type="number"></input>
     <view class="element">元</view>
   </view>
-  <view class="myrelease_notification" style="border-bottom:white;">
+  <view class="myrelease_notification" bindtap="toRelease" style="border-bottom:white;">
     <image src="../../images/release.png" class="release_notification"></image>
     <view class="release_notificationtext">我的发布</view>
     <image src="../../images/goto.png" class="goto"></image>
