--- a/点滴生活/miniprogram/pages/mycenter/release.wxss
+++ b/点滴生活/miniprogram/pages/mycenter/release.wxss
@@ -1,13 +1,18 @@
 /* miniprogram/pages/mycenter/release.wxss */
-
+/* .main{
+  position: relative;
+  width:  100%;
+  height: 1500rpx;
+} */
 .in_pay_tapbar{
+  border:1px solid #CCC;
   width: 242rpx;
   height: 64rpx;
   border-radius: 60rpx;
   background-color:  rgba(253, 242, 241, 100);
   position:absolute;
-  top:360rpx;
-  left:34rpx;
+  top:200rpx;
+  left:235rpx; 
 }
 .income{
   font-size:28rpx;
@@ -31,4 +36,13 @@
   height: 64rpx;
   position: absolute;
   left:0rpx;
+}
+.content{
+  height: 340rpx;
+  width: 600rpx;
+  position: relative;
+  top:280rpx;
+  margin-top: 50rpx;
+  margin-left: 70rpx;
+  border:1px solid #CCC;
 }
