--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -5,6 +5,7 @@
   <view class="limit_hb">
     <limitprogress></limitprogress>
   </view>
+
     <view class="in_pay_tapbar">
       <image class="slide" animation="{{animation}}"bindtap="slidemove" src="../../images/income.png" mode='scaleToFill' ></image>
       <text class="income" style="color:{{incomecolor}}">收入</text>
@@ -12,10 +13,26 @@
     </view>
     <image class="tablechange" src='{{imageSrc}}' mode='aspectFit'
     bindtap="handleChartChange"></image>
+
   <view class="datatableblock">
     <ec-canvas force-use-old-canvas="true" class="datatable"id="mychart-dom" canvas-id="mychart" ec="{{ec}}"></ec-canvas>
+
+    <view class="statistic">
+      <view class="total">
+        <view style="font-weight:bold">总计</view>
+        <view class="num">199900</view>
+      </view>
+      <view class="separete"></view>
+      <view class="average">
+        <view style="font-weight:bold">平均</view>
+        <viwe class="num">9966600</viwe>
+      </view>
+    </view>
+
   </view>
+
   <view class="accountlist_zj">
     <accountlist accountlist='{{costaccountlist}}' account-type="0"></accountlist>
   </view>
+
 </view>
