--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
@@ -70,3 +70,36 @@
   top:1050rpx;
   left:25rpx;
 }
+.statistic{
+  display: flex;
+  flex-direction: row;
+  width: 400rpx;
+  height: 150rpx;
+  top: 450rpx;
+  justify-content:space-around;
+  align-items: center;
+  font-family: Bahnschrift;
+  color:#4C4C4C;
+  position: absolute;
+  left:150rpx
+}
+.total{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.average{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.num{
+  margin-top: 10rpx;
+}
+.separete{
+  background:#F58B7E;
+  width:7rpx;
+  height: 70rpx;
+}
