--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
@@ -36,6 +36,7 @@
   width: 136rpx;
   height: 64rpx;
   position: absolute;
+  pointer-events: none;
   left:0rpx;
 }
 .tablechange{
@@ -49,13 +50,64 @@
   width: 700rpx;
   height: 600rpx;
   border: 1rpx solid rgba(255, 255, 255, 50);
-  border-color:#FFFFFF ;
+  border-color:#FFFFFF;
   border-radius: 40rpx;
   box-shadow: 0rpx 0rpx 12rpx 0rpx rgba(81, 81, 81, 18);
   position: absolute;
   top:460rpx;
   left:25rpx;
 } 
+.year{
+  width:86rpx;
+  height:52rpx;
+  background-color:#FFC8A1;
+  border-style: solid;
+  border-color: rgba(144, 144, 144, 41);
+  border-width:1rpx;
+  font-weight:bold;
+  color:#FFFFFF;
+  font-size:28rpx;
+  text-align:center;
+  line-height: 52rpx;
+  position:absolute;
+  top:28rpx;
+  left:582rpx;
+  border-radius: 28rpx;
+}
+.month{
+  width:86rpx;
+  height:52rpx;
+  background-color:#FFFFFF;
+  border-style: solid;
+  border-color: rgba(144, 144, 144, 41);
+  border-width:1rpx;
+  font-weight:bold;
+  color:#909090;
+  font-size:28rpx;
+  text-align:center;
+  line-height: 52rpx;
+  position:absolute;
+  top:28rpx;
+  left:468rpx;
+  border-radius: 28rpx;
+}
+.week{
+  width:86rpx;
+  height:52rpx;
+  background-color:#FFFFFF;
+  border-style: solid;
+  border-color: rgba(144, 144, 144, 41);
+  border-width:1rpx;
+  font-weight:bold;
+  color:#909090;
+  font-size:28rpx;
+  text-align:center;
+  line-height: 52rpx;
+  position:absolute;
+  top:28rpx;
+  left:354rpx;
+  border-radius: 28rpx;
+}
 .datatable{
   width:620rpx;
   height:334rpx;
